Refactored swap logic failing after chkpoint 14

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,8 @@
 PORT=3001
 OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
 OPENAI_ASSITANT=<YOUR_OPENAI_ASSITANT>
+ARBITRUM_RPC_URL=<FULL_RPC_URL>
+AVALANCHE_RPC_URL=<FULL_RPC_URL>
+SEPOLIA_RPC_URL=<FULL_RPC_URL>
+SIGNER_PRIVATE_KEY=0xprivKey
+SAFE_ADDRESS=0xsafeaddress
