--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@safe-global/protocol-kit": "^5.2.0",
+    "@uniswap/sdk-core": "^7.5.0",
+    "@uniswap/v3-sdk": "^3.24.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
