--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,19 @@
 {
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "@safe-global/protocol-kit": "^5.2.0",
     "@uniswap/sdk-core": "^7.5.0",
     "@uniswap/v3-sdk": "^3.24.0",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "openai": "^4.83.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
