Step 1 of staking working

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,3 +6,4 @@ AVALANCHE_RPC_URL=<FULL_RPC_URL>
 SEPOLIA_RPC_URL=<FULL_RPC_URL>
 SIGNER_PRIVATE_KEY=0xprivKey
 SAFE_ADDRESS=0xsafeaddress
+STAKEKIT_API_KEY=stakekitapikey
