--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material-nextjs": "^6",
     "@mui/x-charts": "^7.26.0",
     "@toolpad/core": "^0.12.0",
+    "dotenv": "^16.4.7",
     "next": "^15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
